
[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
tokio = {version = "1.17.0", features = ["full"]}
serde = {version = "1.0.1", features = ["derive"]}
uuid = {version = "0.8", features = ["v4"]}
tokio-postgres = "0.7.5"